--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="jumbotron text-center text-primary">
         <h1><span class="fa fa-lock"></span> Social Authentication</h1>
-        <p>Login or Register with:</p>
+        <p>Login with:</p>
         <a href="/login/googleAuth" class="btn btn-danger"><span class="fa fa-google"></span> SignIn with Google</a>
         <a href="/login/googleApi" class="btn btn-danger"><span class="fa fa-google"></span> Get Google Access Token</a>
     </div>
