--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,13 +9,23 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="jumbotron text-center text-info">
-        <h1 class="display-4">Hello!</h1>
-        <h1><%= name %></h1>
-        <a href="/logout" class="btn btn-danger"></span> Logout</a>
-        <a href="/getDriver" class="btn btn-danger"><span class="fa fa-google"></span> Get Driver List</a>
-    </div>
+    <div class="row">
+        <div class="col-1">
+          <div class="list-group" id="list-tab" role="tablist">
+            <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="admin" role="tab" aria-controls="home">Home</a>
+            <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="admin/getRequestMenu" role="tab" aria-controls="profile">Profile</a>
+            <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="getDriver" role="tab" aria-controls="messages"><span class="fa fa-google"></span>Get Driver List</a>
+            <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="logout" role="tab" aria-controls="settings">Logout</a>
+          </div>
+        </div>
+        <div class="container col-4" >
+            <div class="jumbotron text-center text-info">
+                <h1 class="display-4">Hello!</h1>
+                <h1><%= name %></h1>
+        </div>
+        </div>
+    </div>    
+    
 </div>
 </body>
 </html> 
