fix userinfo and logout message

--- a/views/vue.ejs
+++ b/views/vue.ejs
@@ -1,5 +1,8 @@
 <head>
-    
+    <link rel="icon" href="/static/dist/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kuletw/lazy@4.6/dist/css/lazy4.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kuletw/lazy@4.6/dist/css/lazy4-brands.css">
+    <link href="/static/dist/css/app.css" rel="stylesheet">
 </head>    
 <body>
     <div id="app">
@@ -8,4 +11,4 @@
 </body>
     
     
-    <script src="/static/dist/js/chunk-vendors.js"></script><script src="/static/dist/main.js"></script>
+    <script src="/static/dist/js/chunk-vendors.js"></script><script src="/static/dist/js/app.js"></script><script></script>
